--- a/archives/toutiao-search/2024-04-05.md
+++ b/archives/toutiao-search/2024-04-05.md
@@ -1,62 +1,75 @@
 # 2024-04-05
 
-共 128 条
+共 140 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 05 2024 09:39:23 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 05 2024 10:14:02 GMT+0800 (China Standard Time) -->
 1. [美称伊朗48小时内或报复以色列](https://so.toutiao.com/search?keyword=美称伊朗48小时内或报复以色列)
 1. [耶伦来广州第一顿饭吃的老字号粤菜](https://so.toutiao.com/search?keyword=耶伦来广州第一顿饭吃的老字号粤菜)
 1. [清明时节话清明](https://so.toutiao.com/search?keyword=清明时节话清明)
 1. [上海火车站安检口少 旅客起哄冲卡](https://so.toutiao.com/search?keyword=上海火车站安检口少+旅客起哄冲卡)
 1. [开封“王婆”换人后节目热度不减](https://so.toutiao.com/search?keyword=开封“王婆”换人后节目热度不减)
-1. [交警通报“小车撞便利店”：4人受伤](https://so.toutiao.com/search?keyword=交警通报“小车撞便利店”：4人受伤)
+1. [男子举报缺斤少两遭商家掐脖殴打](https://so.toutiao.com/search?keyword=男子举报缺斤少两遭商家掐脖殴打)
 1. [拜登对内塔尼亚胡下“最后通牒”](https://so.toutiao.com/search?keyword=拜登对内塔尼亚胡下“最后通牒”)
 1. [男子2年来每周带花陪伴已故爱人](https://so.toutiao.com/search?keyword=男子2年来每周带花陪伴已故爱人)
-1. [以色列南部多个城市遭火箭弹袭击](https://so.toutiao.com/search?keyword=以色列南部多个城市遭火箭弹袭击)
 1. [地震预警App收10元年费 开发者回应](https://so.toutiao.com/search?keyword=地震预警App收10元年费+开发者回应)
+1. [王小洪出席上合会议并作主旨发言](https://so.toutiao.com/search?keyword=王小洪出席上合会议并作主旨发言)
 1. [乔杉回应《乘风踏浪》扮嫩演大学生](https://so.toutiao.com/search?keyword=乔杉回应《乘风踏浪》扮嫩演大学生)
 1. [官方辟谣汕头一建筑因地震倾斜](https://so.toutiao.com/search?keyword=官方辟谣汕头一建筑因地震倾斜)
 1. [林更新看见开美颜的自己](https://so.toutiao.com/search?keyword=林更新看见开美颜的自己)
 1. [两广人清明祭祖爬山涉水无所不能](https://so.toutiao.com/search?keyword=两广人清明祭祖爬山涉水无所不能)
+1. [以色列南部多个城市遭火箭弹袭击](https://so.toutiao.com/search?keyword=以色列南部多个城市遭火箭弹袭击)
 1. [崂山风景区青山变墓地 当地回应](https://so.toutiao.com/search?keyword=崂山风景区青山变墓地+当地回应)
+1. [唐山市副市长李建忠被查](https://so.toutiao.com/search?keyword=唐山市副市长李建忠被查)
+1. [交警通报“小车撞便利店”：4人受伤](https://so.toutiao.com/search?keyword=交警通报“小车撞便利店”：4人受伤)
+1. [男孩称长大当行长 律师解读](https://so.toutiao.com/search?keyword=男孩称长大当行长+律师解读)
+1. [俄称乌军大规模袭击罗斯托夫州](https://so.toutiao.com/search?keyword=俄称乌军大规模袭击罗斯托夫州)
 1. [台媒关注晚霞中的金色歼20](https://so.toutiao.com/search?keyword=台媒关注晚霞中的金色歼20)
-1. [为了卖掉房子 她做了半年中介](https://so.toutiao.com/search?keyword=为了卖掉房子+她做了半年中介)
 1. [泰国两派数千只猴子打群架](https://so.toutiao.com/search?keyword=泰国两派数千只猴子打群架)
+1. [为了卖掉房子 她做了半年中介](https://so.toutiao.com/search?keyword=为了卖掉房子+她做了半年中介)
 1. [罪犯史泰龙被执行死刑](https://so.toutiao.com/search?keyword=罪犯史泰龙被执行死刑)
-1. [救人殉职副镇长被发现时右手高举](https://so.toutiao.com/search?keyword=救人殉职副镇长被发现时右手高举)
 1. [媒体评法院院长穿西装进村捡垃圾](https://so.toutiao.com/search?keyword=媒体评法院院长穿西装进村捡垃圾)
-1. [男子举报缺斤少两遭商家掐脖殴打](https://so.toutiao.com/search?keyword=男子举报缺斤少两遭商家掐脖殴打)
-1. [媒体评《你想活出怎样的人生》](https://so.toutiao.com/search?keyword=媒体评《你想活出怎样的人生》)
-1. [黄子佼发文道歉](https://so.toutiao.com/search?keyword=黄子佼发文道歉)
-1. [耶伦：美不想与华经济脱钩](https://so.toutiao.com/search?keyword=耶伦：美不想与华经济脱钩)
 1. [女子发现丈夫的结婚登记对象是弟媳](https://so.toutiao.com/search?keyword=女子发现丈夫的结婚登记对象是弟媳)
-1. [“我在殡仪馆当遗体接抬工”](https://so.toutiao.com/search?keyword=“我在殡仪馆当遗体接抬工”)
-1. [外卖员闯红灯撞到老人后情绪崩溃](https://so.toutiao.com/search?keyword=外卖员闯红灯撞到老人后情绪崩溃)
-1. [理想MEGA风波“后遗症”开始显现](https://so.toutiao.com/search?keyword=理想MEGA风波“后遗症”开始显现)
-1. [美股收盘：道指跌超530点](https://so.toutiao.com/search?keyword=美股收盘：道指跌超530点)
-1. [曼联2024年10场比赛已被射225脚](https://so.toutiao.com/search?keyword=曼联2024年10场比赛已被射225脚)
+1. [以色列否认暂时关闭一系列驻外使馆](https://so.toutiao.com/search?keyword=以色列否认暂时关闭一系列驻外使馆)
 1. [地震损失6000万美元？台积电辟谣](https://so.toutiao.com/search?keyword=地震损失6000万美元？台积电辟谣)
+1. [外卖员闯红灯撞到老人后情绪崩溃](https://so.toutiao.com/search?keyword=外卖员闯红灯撞到老人后情绪崩溃)
+1. [萌娃给烈士擦拭墓碑问父亲他们冷不](https://so.toutiao.com/search?keyword=萌娃给烈士擦拭墓碑问父亲他们冷不)
+1. [救人殉职副镇长被发现时右手高举](https://so.toutiao.com/search?keyword=救人殉职副镇长被发现时右手高举)
+1. [耶伦：美不想与华经济脱钩](https://so.toutiao.com/search?keyword=耶伦：美不想与华经济脱钩)
+1. [黄子佼发文道歉](https://so.toutiao.com/search?keyword=黄子佼发文道歉)
+1. [媒体：邻居非“人”折射民生之痛](https://so.toutiao.com/search?keyword=媒体：邻居非“人”折射民生之痛)
+1. [曼联2024年10场比赛已被射225脚](https://so.toutiao.com/search?keyword=曼联2024年10场比赛已被射225脚)
+1. [理想MEGA风波“后遗症”开始显现](https://so.toutiao.com/search?keyword=理想MEGA风波“后遗症”开始显现)
+1. [77岁美财长耶伦时隔9月再访华](https://so.toutiao.com/search?keyword=77岁美财长耶伦时隔9月再访华)
 1. [马英九祭拜黄帝后哽咽发声](https://so.toutiao.com/search?keyword=马英九祭拜黄帝后哽咽发声)
-1. [黄晓明自曝为拍戏胖了30斤](https://so.toutiao.com/search?keyword=黄晓明自曝为拍戏胖了30斤)
+1. [曼联近10场英超5胜2平3负](https://so.toutiao.com/search?keyword=曼联近10场英超5胜2平3负)
+1. [全球金价为何如此疯狂](https://so.toutiao.com/search?keyword=全球金价为何如此疯狂)
+1. [朝鲜新型高超音速导弹有多强](https://so.toutiao.com/search?keyword=朝鲜新型高超音速导弹有多强)
+1. [非洲小象踩到自己的鼻子痛到缩起来](https://so.toutiao.com/search?keyword=非洲小象踩到自己的鼻子痛到缩起来)
 1. [母女二人从店里出来被失控车辆撞上](https://so.toutiao.com/search?keyword=母女二人从店里出来被失控车辆撞上)
+1. [记者：奥斯卡的归化不能花大钱](https://so.toutiao.com/search?keyword=记者：奥斯卡的归化不能花大钱)
+1. [官方回应学校要求家长到校门口执勤](https://so.toutiao.com/search?keyword=官方回应学校要求家长到校门口执勤)
+1. [帕尔默社媒晒图庆祝戴帽获胜](https://so.toutiao.com/search?keyword=帕尔默社媒晒图庆祝戴帽获胜)
+1. [媒体评《你想活出怎样的人生》](https://so.toutiao.com/search?keyword=媒体评《你想活出怎样的人生》)
+1. [黄智贤：必须要把台湾带回家](https://so.toutiao.com/search?keyword=黄智贤：必须要把台湾带回家)
+1. [伊朗以色列可能爆发直接冲突吗](https://so.toutiao.com/search?keyword=伊朗以色列可能爆发直接冲突吗)
+1. [帕尔默创英超有纪录以来最晚制胜球](https://so.toutiao.com/search?keyword=帕尔默创英超有纪录以来最晚制胜球)
+1. [“我在殡仪馆当遗体接抬工”](https://so.toutiao.com/search?keyword=“我在殡仪馆当遗体接抬工”)
+1. [美股收盘：道指跌超530点](https://so.toutiao.com/search?keyword=美股收盘：道指跌超530点)
+1. [黄晓明自曝为拍戏胖了30斤](https://so.toutiao.com/search?keyword=黄晓明自曝为拍戏胖了30斤)
 1. [利物浦3-1谢菲联全场数据对比](https://so.toutiao.com/search?keyword=利物浦3-1谢菲联全场数据对比)
 1. [“坟地产”有多赚钱](https://so.toutiao.com/search?keyword=“坟地产”有多赚钱)
 1. [《追风者》牛姐跟魏若来退婚](https://so.toutiao.com/search?keyword=《追风者》牛姐跟魏若来退婚)
 1. [克宫：俄与北约已进入直接对抗](https://so.toutiao.com/search?keyword=克宫：俄与北约已进入直接对抗)
-1. [全球金价为何如此疯狂](https://so.toutiao.com/search?keyword=全球金价为何如此疯狂)
 1. [开封王婆回应“已婚男”事件](https://so.toutiao.com/search?keyword=开封王婆回应“已婚男”事件)
-1. [非洲小象踩到自己的鼻子痛到缩起来](https://so.toutiao.com/search?keyword=非洲小象踩到自己的鼻子痛到缩起来)
 1. [小米汽车能否成为中国版“特斯拉”](https://so.toutiao.com/search?keyword=小米汽车能否成为中国版“特斯拉”)
 1. [《与凤行》沈璃事后翻脸不认人](https://so.toutiao.com/search?keyword=《与凤行》沈璃事后翻脸不认人)
 1. [公园现“爬行锻炼大军”](https://so.toutiao.com/search?keyword=公园现“爬行锻炼大军”)
-1. [黄智贤：必须要把台湾带回家](https://so.toutiao.com/search?keyword=黄智贤：必须要把台湾带回家)
 1. [蔡崇信：阿里过去几年忘了真正客户](https://so.toutiao.com/search?keyword=蔡崇信：阿里过去几年忘了真正客户)
-1. [官方回应学校要求家长到校门口执勤](https://so.toutiao.com/search?keyword=官方回应学校要求家长到校门口执勤)
 1. [奥纳纳本赛季为曼联出战41场丢65球](https://so.toutiao.com/search?keyword=奥纳纳本赛季为曼联出战41场丢65球)
 1. [蔡崇信建议年轻人学习前沿学科](https://so.toutiao.com/search?keyword=蔡崇信建议年轻人学习前沿学科)
 1. [哈尔滨22岁男子被多名未成年人围殴](https://so.toutiao.com/search?keyword=哈尔滨22岁男子被多名未成年人围殴)
 1. [伊朗最高领袖：以色列将被扇耳光](https://so.toutiao.com/search?keyword=伊朗最高领袖：以色列将被扇耳光)
-1. [伊朗以色列可能爆发直接冲突吗](https://so.toutiao.com/search?keyword=伊朗以色列可能爆发直接冲突吗)
 1. [《与凤行》圆房名场面](https://so.toutiao.com/search?keyword=《与凤行》圆房名场面)
 1. [救人副镇长失联17小时后遗体被找到](https://so.toutiao.com/search?keyword=救人副镇长失联17小时后遗体被找到)
 1. [多地已率先启动房产以旧换新](https://so.toutiao.com/search?keyword=多地已率先启动房产以旧换新)
@@ -90,7 +103,6 @@
 1. [媒体评考研生疑因虐猫被刷](https://so.toutiao.com/search?keyword=媒体评考研生疑因虐猫被刷)
 1. [伊朗东南部两地军事总部遭恐袭](https://so.toutiao.com/search?keyword=伊朗东南部两地军事总部遭恐袭)
 1. [北约或将正式承担起对乌军援责任](https://so.toutiao.com/search?keyword=北约或将正式承担起对乌军援责任)
-1. [77岁美财长耶伦时隔9月再访华](https://so.toutiao.com/search?keyword=77岁美财长耶伦时隔9月再访华)
 1. [沙利文骨折与俄空袭乌有关吗](https://so.toutiao.com/search?keyword=沙利文骨折与俄空袭乌有关吗)
 1. [开封王婆：现在上台心里有负担](https://so.toutiao.com/search?keyword=开封王婆：现在上台心里有负担)
 1. [男子扫墓遭红火蚁咬伤休克被送医](https://so.toutiao.com/search?keyword=男子扫墓遭红火蚁咬伤休克被送医)
