--- a/archives/zhihu-questions/2024-04-05.md
+++ b/archives/zhihu-questions/2024-04-05.md
@@ -1,21 +1,25 @@
 # 2024-04-05
 
-共 97 条
+共 102 条
 
 <!-- BEGIN ZHIHUQUESTIONS -->
-<!-- 最后更新时间 Fri Apr 05 2024 09:39:23 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 05 2024 10:14:02 GMT+0800 (China Standard Time) -->
 1. [美财政部部长耶伦抵达广州，此行有哪些信息值得关注？](https://www.zhihu.com/question/651677096)
 1. [奔驰车主 2 次碾压孩子后驶离，警方回应「司机手续齐全，已排除其主观故意伤害可能」，哪些信息值得关注？](https://www.zhihu.com/question/651663237)
 1. [「世界在世最长寿男子」去世，习惯早睡每天一杯白兰地，有哪些长寿秘诀？](https://www.zhihu.com/question/651657456)
-1. [央行、金融监管总局发文，自用汽车贷款最高发放比例可达到 100%，零首付购车要来了吗？有何影响？](https://www.zhihu.com/question/651544208)
-1. [大家对现在已经不是工藤新一在扮演柯南而是柯南在扮演工藤新一这点是怎么看的？](https://www.zhihu.com/question/651450193)
 1. [报道称特斯拉将为印度电动汽车工厂选址，具体情况如何？对印度汽车市场有何影响?](https://www.zhihu.com/question/651648214)
 1. [34 岁泰勒·斯威夫特首登全球亿万富豪榜，仅靠音乐和演艺收入，净资产达 80 亿元，哪些信息值得关注？](https://www.zhihu.com/question/651648178)
-1. [如何评价NGA考证hoyo-mix又有制作人将要离职？](https://www.zhihu.com/question/651672960)
+1. [大家对现在已经不是工藤新一在扮演柯南而是柯南在扮演工藤新一这点是怎么看的？](https://www.zhihu.com/question/651450193)
 1. [现在年轻人还知道上坟的规矩吗？](https://www.zhihu.com/question/651646837)
+1. [如何评价NGA考证hoyo-mix又有制作人将要离职？](https://www.zhihu.com/question/651672960)
 1. [你觉得什么运动方式「性价比」最高？](https://www.zhihu.com/question/651469058)
-1. [什么是中国书法史上的巅峰之作？](https://www.zhihu.com/question/313218201)
+1. [央行、金融监管总局发文，自用汽车贷款最高发放比例可达到 100%，零首付购车要来了吗？有何影响？](https://www.zhihu.com/question/651544208)
 1. [什么是偷换概念，能否举一个例子?](https://www.zhihu.com/question/313674369)
+1. [打不开的心结怎么办?](https://www.zhihu.com/question/646170821)
+1. [孩子生病的时候，妈妈们在干啥？](https://www.zhihu.com/question/651569384)
+1. [什么才叫真正的释怀呢？](https://www.zhihu.com/question/605017306)
+1. [那些上清华的人高中都怎么过来的？](https://www.zhihu.com/question/333864283)
+1. [什么是中国书法史上的巅峰之作？](https://www.zhihu.com/question/313218201)
 1. [高铁走到半路两车乘客互换，12306 回应「可能是应急调整」，哪些信息值得关注？](https://www.zhihu.com/question/651694824)
 1. [如果只允许出现10个6A级景区，你会选择哪十个景区呢？](https://www.zhihu.com/question/276628410)
 1. [几乎所有物理常数都是无理数，为什么光速299792458m/s是个整数？这一数字有误差吗?](https://www.zhihu.com/question/492900436)
@@ -23,36 +27,39 @@
 1. [一百万人民币可以在泰国清迈生活多久？](https://www.zhihu.com/question/634070703)
 1. [为什么 python 内置的 sort 比自己写的快速排序快 100 倍？](https://www.zhihu.com/question/503261465)
 1. [弟弟想放弃上大学去打电竞咋办?](https://www.zhihu.com/question/605640444)
+1. [如何拥有旺盛精力？](https://www.zhihu.com/question/21671881)
+1. [如何评价包贝尔导演的喜剧电影《大「反」派》？](https://www.zhihu.com/question/651507679)
+1. [基因好是一种怎样的体验？](https://www.zhihu.com/question/47151897)
+1. [《你想活出怎样的人生》中展现了哪些人生哲理？](https://www.zhihu.com/question/633348067)
+1. [那些在外有事业，在家又把孩子照顾的很好的女强人是怎么做到的？](https://www.zhihu.com/question/382536516)
+1. [有没有一瞬间，你觉得宠物好像听懂了你说的话？](https://www.zhihu.com/question/651357171)
+1. [如果我发明出一种食物，一天吃20克就管饱，我的成就有多大?](https://www.zhihu.com/question/612403992)
+1. [AI「音乐裁缝」横行互联网，超 200 名音乐家呼吁「防止 AI 的掠夺性使用」，哪些信息值得关注？](https://www.zhihu.com/question/651614363)
+1. [文笔挑战，清风满袖乘舟去——你会怎么接下一句？](https://www.zhihu.com/question/651564371)
+1. [《一人之下》怎么感觉少了一代人？中生代应该有两代人吧？](https://www.zhihu.com/question/651368938)
+1. [土木转行的都在干什么？](https://www.zhihu.com/question/647942174)
+1. [如何评价《一人之下》漫画 666（707）话？](https://www.zhihu.com/question/651723315)
+1. [台湾发生强震后龟山岛部分断裂，专家解析地震原因，哪些细节值得关注？](https://www.zhihu.com/question/651444144)
+1. [2024LCK春季赛季后赛HLE 3:0 横扫T1，如何评价这场比赛？](https://www.zhihu.com/question/651657153)
+1. [青岛崂山风景区900多亩青山成墓地，毁林挖山扩建牟利，运营公司法人代表是居委会主任，哪些信息值得关注？](https://www.zhihu.com/question/651719174)
+1. [在养宠过程中，你是否有过特别崩溃的瞬间？](https://www.zhihu.com/question/639819428)
+1. [美联储 2024-2026 年到底何时降息？降息几次？经济是否会硬着陆？](https://www.zhihu.com/question/649491848)
+1. [AI 成财富增长密码，黄仁勋身家一年暴涨超 4000 亿元人民币，成华人首富，哪些信息值得关注？](https://www.zhihu.com/question/651719144)
+1. [我国医生成功将猪肾移植人体，即刻产生尿液，移植肾已持续工作 9 天，功能良好，这一突破具有哪些意义？](https://www.zhihu.com/question/651719119)
+1. [现货黄金首次突破 2300 美元，续创历史新高，鲍威尔再次暗示不会降息，哪些信息值得关注？](https://www.zhihu.com/question/651614360)
+1. [俄防长表示，俄方愿意就乌克兰问题进行对话，释放了什么信号？](https://www.zhihu.com/question/651597730)
+1. [安理会上，美国代表警告伊朗「不要借机报复美方人员」，如何解读？](https://www.zhihu.com/question/651596127)
+1. [《你想活出怎样的人生》在宫崎骏作品序列中能排到第几？](https://www.zhihu.com/question/651363195)
+1. [长期跑步该如何保护膝关节？](https://www.zhihu.com/question/651559901)
+1. [生成式 AI 的发展方向，应当是 Chat 还是 Agent？](https://www.zhihu.com/question/637090848)
+1. [要是有人飞升成星神之前，有家庭妻儿，飞升之后，妻儿会怎么样？](https://www.zhihu.com/question/651024106)
 1. [土耳其地方选举初步结果「反对党大胜」，埃尔多安遭选民背弃，结果将如何？当国局势将发生怎样的变化？](https://www.zhihu.com/question/651446030)
 1. [儿时听过父母哪些“善意”的谎言？](https://www.zhihu.com/question/651638083)
 1. [相完亲后父母不同意了怎么办？](https://www.zhihu.com/question/651564429)
 1. [想带着孩子一起听雨、赏雨，有哪些让小朋友感受到乐趣的方法？](https://www.zhihu.com/question/650130665)
-1. [如果我发明出一种食物，一天吃20克就管饱，我的成就有多大?](https://www.zhihu.com/question/612403992)
-1. [《你想活出怎样的人生》中展现了哪些人生哲理？](https://www.zhihu.com/question/633348067)
 1. [你钓鱼的时候发生过什么离谱的事？](https://www.zhihu.com/question/468943312)
-1. [如何评价《一人之下》漫画 666（707）话？](https://www.zhihu.com/question/651723315)
-1. [土木转行的都在干什么？](https://www.zhihu.com/question/647942174)
-1. [基因好是一种怎样的体验？](https://www.zhihu.com/question/47151897)
-1. [那些在外有事业，在家又把孩子照顾的很好的女强人是怎么做到的？](https://www.zhihu.com/question/382536516)
-1. [台湾发生强震后龟山岛部分断裂，专家解析地震原因，哪些细节值得关注？](https://www.zhihu.com/question/651444144)
-1. [如何评价包贝尔导演的喜剧电影《大「反」派》？](https://www.zhihu.com/question/651507679)
 1. [游戏《绝区零》让你坚持玩的原因是什么？](https://www.zhihu.com/question/651576388)
-1. [《你想活出怎样的人生》在宫崎骏作品序列中能排到第几？](https://www.zhihu.com/question/651363195)
-1. [长期跑步该如何保护膝关节？](https://www.zhihu.com/question/651559901)
-1. [2024LCK春季赛季后赛HLE 3:0 横扫T1，如何评价这场比赛？](https://www.zhihu.com/question/651657153)
-1. [要是有人飞升成星神之前，有家庭妻儿，飞升之后，妻儿会怎么样？](https://www.zhihu.com/question/651024106)
-1. [青岛崂山风景区900多亩青山成墓地，毁林挖山扩建牟利，运营公司法人代表是居委会主任，哪些信息值得关注？](https://www.zhihu.com/question/651719174)
-1. [现货黄金首次突破 2300 美元，续创历史新高，鲍威尔再次暗示不会降息，哪些信息值得关注？](https://www.zhihu.com/question/651614360)
-1. [美联储 2024-2026 年到底何时降息？降息几次？经济是否会硬着陆？](https://www.zhihu.com/question/649491848)
-1. [AI 成财富增长密码，黄仁勋身家一年暴涨超 4000 亿元人民币，成华人首富，哪些信息值得关注？](https://www.zhihu.com/question/651719144)
-1. [我国医生成功将猪肾移植人体，即刻产生尿液，移植肾已持续工作 9 天，功能良好，这一突破具有哪些意义？](https://www.zhihu.com/question/651719119)
-1. [安理会上，美国代表警告伊朗「不要借机报复美方人员」，如何解读？](https://www.zhihu.com/question/651596127)
-1. [俄防长表示，俄方愿意就乌克兰问题进行对话，释放了什么信号？](https://www.zhihu.com/question/651597730)
-1. [有没有一瞬间，你觉得宠物好像听懂了你说的话？](https://www.zhihu.com/question/651357171)
-1. [AI「音乐裁缝」横行互联网，超 200 名音乐家呼吁「防止 AI 的掠夺性使用」，哪些信息值得关注？](https://www.zhihu.com/question/651614363)
 1. [玩家应该捍卫自己在游戏中与虚拟角色缔结的婚约吗？如何捍卫？](https://www.zhihu.com/question/646485292)
-1. [文笔挑战，清风满袖乘舟去——你会怎么接下一句？](https://www.zhihu.com/question/651564371)
-1. [如何拥有旺盛精力？](https://www.zhihu.com/question/21671881)
 1. [23-24 赛季英超曼城 4:1 阿斯顿维拉，福登上演帽子戏法，如何评价这场比赛？](https://www.zhihu.com/question/651574407)
 1. [有没有什么特别好看的头像？](https://www.zhihu.com/question/356862224)
 1. [你暗恋的人也在暗恋你，是一种什么样的体验？](https://www.zhihu.com/question/341938727)
@@ -65,7 +72,6 @@
 1. [为什么镜像与实物左右对称而上下一致？](https://www.zhihu.com/question/651406056)
 1. [为什么现在的建筑不盖成古代那样了？](https://www.zhihu.com/question/291956307)
 1. [江西风雹灾害已致 7 人死亡 31.3 万人受灾，直接经济损失 4 亿元，哪些信息值得关注？](https://www.zhihu.com/question/651684079)
-1. [在养宠过程中，你是否有过特别崩溃的瞬间？](https://www.zhihu.com/question/639819428)
 1. [目前机器人研究热点是什么？](https://www.zhihu.com/question/328583927)
 1. [2024年了cv还有什么可以卷的吗？](https://www.zhihu.com/question/646965266)
 1. [失恋后做什么运动能够尽快的调整好情绪心态，放下包袱继续前行?](https://www.zhihu.com/question/651570906)
@@ -88,7 +94,6 @@
 1. [国内零售金每克涨破700元，专家称多重因素支撑金价仍处高位，如何看待当前金价走势？下行通道何时到来？](https://www.zhihu.com/question/651548759)
 1. [多地曝光小区存在「骨灰房」，受访者称可能「住的死人比活人多」，如何看待这一现象？从法律角度如何解读？](https://www.zhihu.com/question/651442289)
 1. [C罗六天内2次帽子戏法，从技术角度分析，6个进球哪个难度更大？](https://www.zhihu.com/question/651456410)
-1. [《一人之下》怎么感觉少了一代人？中生代应该有两代人吧？](https://www.zhihu.com/question/651368938)
 1. [小米汽车工厂现日产能不足 300 辆，交付最长需八个月，供应商称收到要求提产能邮件，哪些信息值得关注？](https://www.zhihu.com/question/651543764)
 1. [超强的学习能力是怎样练就的？](https://www.zhihu.com/question/35103080)
 1. [网文的开篇如何避免写成群像？](https://www.zhihu.com/question/384307031)
